ajout de verification de 'utilisateur par mail

--- a/HotelManagASP/appsettings.json
+++ b/HotelManagASP/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnectionString": "Data Source=DESKTOP;Initial Catalog=Gestion_Hotel;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+  },
+  "EmailSettings": {
+    "SMTPServer": "sandbox.smtp.mailtrap.io",
+    "SMTPPort": 587,
+    "SenderEmail": "HotelManagement@example.com",
+    "SenderName": "Hotel Management",
+    "SMTPUser": "8c84de6d0d4a30",
+    "SMTPPassword": "92354d2ae2c2b0"
   }
 }
